--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "meetup-app",
+  "name": "nextjs-course",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-    "next": "13.4.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "fs": "^0.0.1-security",
+    "mongodb": "^5.5.0",
+    "next": "10.0.6",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   }
 }
