--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "mongodb": "^5.5.0",
-    "next": "10.0.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "next": "^12.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.32.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.40.0"
   }
 }
